fix the scrollbar in mobile

--- a/src/containers/Home/style.scss
+++ b/src/containers/Home/style.scss
@@ -76,8 +76,10 @@ i {
 }
 
 @media screen and (max-width: 900px) {
-  .section>.main-content {
+  .section {
+    height: 100vh;
+  }
+  .main-content {
     height: 100vh;
   }
 }
-
